data print success

--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -1,2 +1,6 @@
 <h1>검색</h1>
 <p>원하는 교수님을 검색하는 페이지</p>
+
+<form action='/school/professor' method='get'>
+  <input type='text' name='professor_name'>
+</form>
