--- a/app/views/school/professor.html.erb
+++ b/app/views/school/professor.html.erb
@@ -1,2 +1,10 @@
 <h1>교수님 페이지</h1>
 <p>교수님 한분한분에 대한 데이터를 표시하는 페이지. 디비에서 불러올 것임.</p>
+
+<% @professor.each do |x| %>
+이름 <%= x.name %>
+학교 <%= x.school %>
+이메일 <%= x.email %>
+소속 <%= x.department %>
+<% end %>
+
